WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196797
REGRESSION (
r241734
): ⌥⌘↑ and ⌥⌘↓ no longer navigate to previous/next Reading List article
https://bugs.webkit.org/show_bug.cgi?id=196797
Summary
REGRESSION (r241734): ⌥⌘↑ and ⌥⌘↓ no longer navigate to previous/next Reading...
Tim Horton
Reported
2019-04-10 17:37:52 PDT
REGRESSION (
r241734
): ⌥⌘↑ and ⌥⌘↓ no longer navigate to previous/next Reading List article
Attachments
Patch
(2.58 KB, patch)
2019-04-10 17:38 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-04-10 17:38:24 PDT
Created
attachment 367183
[details]
Patch
Tim Horton
Comment 2
2019-04-10 17:38:26 PDT
<
rdar://problem/48484715
>
WebKit Commit Bot
Comment 3
2019-04-10 23:08:45 PDT
Comment on
attachment 367183
[details]
Patch Clearing flags on attachment: 367183 Committed
r244183
: <
https://trac.webkit.org/changeset/244183
>
WebKit Commit Bot
Comment 4
2019-04-10 23:08:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug